# TempNeptune

./: CMakeLists.txt  TODO.txt
CMake/: BuildProjectTree.cmake  BuildWindowsProjectTree.cmake  CMakeLists.txt  ConfigVars.cmake  DefinePreprocessorVariables.cmake  ImportDependencies.cmake  ManageBuildConfigurations.cmake  NeptuneBuildVariables.cmake  PortableCMakeConstants.cmake  PostBuildOperations.cmake  SetCMakeConfigCacheVariables.cmake  SetCompilationFlags.cmake
Dependencies/: README.txt
Dependencies/Shadow/: shadow.lib
Dependencies/Shadow/include/Shadow/: shadow.h
Dependencies/Sonic/: sonic.lib
Dependencies/Sonic/include/Sonic/: sonic.h
Engine/: CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  Neptune.cpp  Neptune.h  ProgrammingGUIDELINE.txt
Engine/Graphics/: CMakeLists.txt  DisplayDeviceInterface.cpp  DisplayDeviceInterface.h
Engine/Multiplatform/: CMakeLists.txt
Engine/Multiplatform/Core/: CMakeLists.txt
Engine/Multiplatform/Core/Debug/: CMakeLists.txt
Engine/Multiplatform/Core/File/: CMakeLists.txt
Engine/Multiplatform/Core/Graphics/: CMakeLists.txt  Shader.cpp
Engine/Multiplatform/Core/Input/: CMakeLists.txt
Engine/Multiplatform/Core/Maintenance/: CMakeLists.txt
Engine/Multiplatform/Core/Math/: CMakeLists.txt
Engine/Multiplatform/Core/Math/Geometry/: CMakeLists.txt
Engine/Multiplatform/Core/Math/Vectors/: CMakeLists.txt
Engine/Multiplatform/Core/Physics/: CMakeLists.txt
Engine/Multiplatform/Core/Physics/Mechanics/: CMakeLists.txt
Engine/Multiplatform/Core/Profiling/: CMakeLists.txt
Engine/Multiplatform/Core/Shaders/: CMakeLists.txt
Engine/Multiplatform/Core/Shaders/Fragment/: CMakeLists.txt
Engine/Multiplatform/Core/Shaders/Vertex/: CMakeLists.txt
Engine/Multiplatform/Core/StdInterface/: CMakeLists.txt
Engine/Multiplatform/Core/System/: CMakeLists.txt
Engine/Multiplatform/Core/System/Hashing/: CMakeLists.txt
Engine/Multiplatform/Core/System/Type/: CMakeLists.txt
Engine/Multiplatform/HighLevel/: CMakeLists.txt
Engine/Multiplatform/HighLevel/Application/: CMakeLists.txt
Engine/Multiplatform/HighLevel/Application/Controller/: CMakeLists.txt
Engine/Multiplatform/HighLevel/Camera/: CMakeLists.txt
Engine/Multiplatform/HighLevel/Camera/Controller/: CMakeLists.txt
Engine/Multiplatform/HighLevel/Graphics/: CMakeLists.txt
Engine/Multiplatform/HighLevel/Graphics/Factories/: CMakeLists.txt
Engine/Multiplatform/HighLevel/Graphics/Spawners/: CMakeLists.txt  ViewSpawner.cpp  ViewSpawner.h
Engine/Windows/: CMakeLists.txt
Engine/Windows/Core/: CMakeLists.txt
Engine/Windows/Core/Graphics/: CMakeLists.txt
Engine/Windows/Core/Input/: CMakeLists.txt
Engine/Windows/Core/Math/: CMakeLists.txt
Engine/Windows/Core/Math/Geometry/: CMakeLists.txt
Engine/Windows/Core/Math/Vectors/: CMakeLists.txt
Engine/Windows/HighLevel/: CMakeLists.txt
Engine/Windows/HighLevel/Application/: CMakeLists.txt
Engine/Windows/HighLevel/Application/Controller/: CMakeLists.txt
Engine/Windows/HighLevel/Camera/: CMakeLists.txt
Engine/Windows/HighLevel/Camera/Controller/: CMakeLists.txt
Tools/: ListSources.py
